# autonomous-platform

./: .gitignore  AGENTS.md  README.md  agents.md  coder.md  config.yaml.example  main.py  patrol_module_plan.md  planner.md  pyproject.toml  requirements.txt  reviewer.md  specs.md  tester.md
agents/: backend-api.md  diagnostics-observability.md  documentation-runbook.md  logistics-app.md  platform-architect.md  release-ops.md  robotics-safety.md  ros2-integration.md  testing-verification.md
api/: __init__.py  alerts.py  auth.py  hmi.py  rest.py  ws_broker.py
apps/: __init__.py
config/: app.local.json
core/: __init__.py  config.py  database.py  event_bus.py  logger.py
data/: logistics_routes.json  logistics_stations.json  patrol_routes.json  patrol_stations.json  robots.yaml  routes.json  stations.json  zones.yaml
docs/: README.md  phase1_runbook.md
hardware/: __init__.py  gpio_relay.py  mes_bridge.py  qr_anchor.py  video_reader.py
navigation/: __init__.py  navigator.py  obstacle.py  route_store.py  slam.py
quadruped/: __init__.py  heartbeat.py  sdk_adapter.py  state_monitor.py
scripts/: check_runtime_env.sh  dog_wifi_provision.sh  manual_e2e_smoke.sh  provision_cli.py  quadruped_wifi_provision.sh  sdk_preflight_check.py  start_logistics_dev.sh
shared/: __init__.py
tasks/: __init__.py  battery_manager.py  dispatcher.py  queue.py  watchdog.py
tests/: test_alert_api.py  test_alerts.py  test_api.py  test_audit_api.py  test_audit_store.py  test_auth.py  test_battery_manager.py  test_commissioning_api.py  test_commissioning_service.py  test_config.py  (+69 more)
(+199 files in other folders)
