[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-logistic"
version = "0.1.0"
description = "Local-first quadruped transport robot foundation."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["autonomous_logistic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
